--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>h2</artifactId>
       <version>2.1.214</version>
     </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.12</version>
+      </dependency>
 
   </dependencies>
 
